--- a/src/style.css
+++ b/src/style.css
@@ -25,8 +25,24 @@ main {
     background-color: var(--secondary-clr);
     border-right: 1px solid var(--line-dash);
     width: 20%;
+    height: 100%;
     display: flex;
     flex-direction: column;
+}
+
+.items {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 20px 50px;
+    gap: 20px;
+}
+
+.project-list {
+    margin: 10px;
+    font-size: 1.2rem;
+    font-weight: normal;
 }
 
 .btn,
@@ -45,7 +61,8 @@ li {
     padding: 5px 0;
 }
 
-li:hover {
+li:hover,
+.items .item:hover {
     background-color: var(--hover-clr);
     padding-left: 20px;
     border-radius: 5px;
@@ -130,7 +147,8 @@ fieldset{
 }
 
 button,
-span {
+span,
+.items .item {
     cursor: pointer;
 }
 
