--- a/src/style.css
+++ b/src/style.css
@@ -1,335 +1,334 @@
 :root {
-    --primary-clr: #FFFFFF;
-    --secondary-clr: #F6F6F6;
-    --line-dash: #E6E6E6;
-    --black-text: #222222;
-    --hover-clr: #E4E4E4;
+  --primary-clr: #ffffff;
+  --secondary-clr: #f6f6f6;
+  --line-dash: #e6e6e6;
+  --black-text: #222222;
+  --hover-clr: #e4e4e4;
 }
 
 body {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    height: 100vh;
-    line-height: 1.5;
-    color: var(--black-text);
-    font-family: Poppins, sans-serif;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  height: 100vh;
+  line-height: 1.5;
+  color: var(--black-text);
+  font-family: Poppins, sans-serif;
 }
 
 main {
-    display: flex;
-    height: inherit;
+  display: flex;
+  height: inherit;
 }
 
 .sidebar {
-    background-color: var(--secondary-clr);
-    border-right: 1px solid var(--line-dash);
-    width: 20%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  background-color: var(--secondary-clr);
+  border-right: 1px solid var(--line-dash);
+  width: 20%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .items {
-    display: flex;
-    flex-direction: column;
-    font-size: 1.5rem;
-    font-weight: bold;
-    padding: 20px 50px;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 20px 50px;
+  gap: 20px;
 }
 
 .project-list {
-    margin: 10px;
-    font-size: 1.2rem;
-    font-weight: normal;
+  margin: 10px;
+  font-size: 1.2rem;
+  font-weight: normal;
 }
 
 .btn,
 input {
-    font-family: inherit;
+  font-family: inherit;
 }
 
 .add-project.btn {
-    font-size: 1.5rem;
-    margin: 10px;
+  font-size: 1.5rem;
+  margin: 10px;
 }
 
 li span {
-    cursor: pointer;
-    list-style-type: none;
-    padding: 5px 0;
+  cursor: pointer;
+  list-style-type: none;
+  padding: 5px 0;
 }
 
 li span:hover,
 .items .item:hover {
-    background-color: var(--hover-clr);
-    padding-left: 20px;
-    padding-right: 10px;
-    border-radius: 5px;
+  background-color: var(--hover-clr);
+  padding-left: 20px;
+  padding-right: 10px;
+  border-radius: 5px;
 }
 
 .project-input {
-    width: 80%;
-    font-size: inherit;
-    border: 1px solid var(--line-dash);
-    border-radius: 5px;
-    padding-left: 20px;
-}   
-
-.content {
-    background-color: var(--primary-clr);
-    width: 80%;
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
+  width: 80%;
+  font-size: inherit;
+  border: 1px solid var(--line-dash);
+  border-radius: 5px;
+  padding-left: 20px;
 }
 
-.content h1, 
+.content {
+  background-color: var(--primary-clr);
+  width: 80%;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+.content h1,
 .content .add-todo.btn {
-    margin-left: 200px;
+  margin-left: 200px;
 }
 
 .add-todo.btn {
-    width: 100px;
-    margin-bottom: 50px;
+  width: 100px;
+  margin-bottom: 50px;
 }
 
 .modal {
-    align-self: center;
-    position: absolute;
-    background-color: var(--secondary-clr);
-    top: 20%;
-    font-size: 1.5rem;
-    border-radius: 8px;
-    width: 50%;
-    height: min-content;
-    padding: 20px;
-    border: 1px solid var(--line-dash);
-    border-radius: 8px;
+  align-self: center;
+  position: absolute;
+  background-color: var(--secondary-clr);
+  top: 20%;
+  font-size: 1.5rem;
+  border-radius: 8px;
+  width: 50%;
+  height: min-content;
+  padding: 20px;
+  border: 1px solid var(--line-dash);
+  border-radius: 8px;
 }
 
-fieldset{
-    border: none;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
+fieldset {
+  border: none;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
 }
 
 .due-date {
-    display: flex;
-    align-items: center;
-    gap: 20px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 
 .due-date input {
-    width: 120px;
-    height: 50px;
-    padding: 0 20px;
-    border-radius: 8px;
-    border-style: none;
-    border: 1px solid blue;
-    color: blue;
-    cursor: pointer;
+  width: 120px;
+  height: 50px;
+  padding: 0 20px;
+  border-radius: 8px;
+  border-style: none;
+  border: 1px solid blue;
+  color: blue;
+  cursor: pointer;
 }
 
 .due-date input:hover {
-    background-color: rgba(128, 128, 128, 0.5);
+  background-color: rgba(128, 128, 128, 0.5);
 }
 
 #title,
 #description {
-    font-size: 1.15rem;
-    padding-top: 10px;
-    padding-left: 20px;
-    font-family: inherit;
-    border: none;
-    resize: none;
+  font-size: 1.15rem;
+  padding-top: 10px;
+  padding-left: 20px;
+  font-family: inherit;
+  border: none;
+  resize: none;
 }
 
 button,
 span,
 .items .item {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 #title {
-    border-bottom: 2px solid var(--line-dash);
+  border-bottom: 2px solid var(--line-dash);
 }
 
 .priority {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 .priority button {
-    font-family: inherit;
-    border-radius: 4px;
-    padding: 0 8px;
-    width: 80px;
-    cursor: pointer;
-    border: 1px solid transparent;
+  font-family: inherit;
+  border-radius: 4px;
+  padding: 0 8px;
+  width: 80px;
+  cursor: pointer;
+  border: 1px solid transparent;
 }
 
 #low {
-    color: green;
-    border: 1px solid green;
-    background-color: inherit;
+  color: green;
+  border: 1px solid green;
+  background-color: inherit;
 }
 
 #medium {
-    color: orange;
-    border: 1px solid orange;
-    background-color: inherit;
+  color: orange;
+  border: 1px solid orange;
+  background-color: inherit;
 }
 
 #high {
-    color: red;
-    border: 1px solid red;
-    background-color: inherit;
+  color: red;
+  border: 1px solid red;
+  background-color: inherit;
 }
 
 #low:hover,
 #low.active {
-    color: white;
-    background-color: green;
+  color: white;
+  background-color: green;
 }
 
 #medium:hover,
 #medium.active {
-    color: white;
-    background-color: orange;
+  color: white;
+  background-color: orange;
 }
 
 #high:hover,
 #high.active {
-    color: white;
-    background-color: red;
+  color: white;
+  background-color: red;
 }
 
 .high-priority.shaded {
-    background-color: red;
+  background-color: red;
 }
 
 .medium-priority.shaded {
-    background-color: orange;
+  background-color: orange;
 }
 
 .low-priority.shaded {
-    background-color: green;
+  background-color: green;
 }
 
 .add-task.btn {
-    position: absolute;
-    bottom: 20px;
-    width: 100px;
-    height: 40px;
-    border-radius: 8px;
-    color: blue;
-    border: 1px solid blue;
-    cursor: pointer;
-    right: 40PX;
+  position: absolute;
+  bottom: 20px;
+  width: 100px;
+  height: 40px;
+  border-radius: 8px;
+  color: blue;
+  border: 1px solid blue;
+  cursor: pointer;
+  right: 40px;
 }
 
-
 .exit {
-    position: absolute;
-    color: gray;
-    top: 20px;
-    right: 40px;
-    cursor: pointer
+  position: absolute;
+  color: gray;
+  top: 20px;
+  right: 40px;
+  cursor: pointer;
 }
 
 .exit:hover {
-    color: black;
-    font-weight: bold;
+  color: black;
+  font-weight: bold;
 }
 
 .add-task.btn:hover {
-    color: white;
-    background-color: blue;
+  color: white;
+  background-color: blue;
 }
 
 #description {
-    height: 200px; /* Set the height of the input field */
-    word-break: normal;
+  height: 200px; /* Set the height of the input field */
+  word-break: normal;
 }
 
 .todos-container {
-    display: flex;
-    width: 90%;
-    align-self: center;
-    flex-wrap: wrap;
+  display: flex;
+  width: 90%;
+  align-self: center;
+  flex-wrap: wrap;
 }
 
 .item-container {
-    width: 1000px;
-    font-size: 1.2rem;
-    align-self: center;
-    display: flex;
-    background-color: var(--secondary-clr);
-    padding: 20px;
-    gap: 20px;
-    width: 45%;
-    border-radius: 8px;
-    margin: 10px;
+  width: 1000px;
+  font-size: 1.2rem;
+  align-self: center;
+  display: flex;
+  background-color: var(--secondary-clr);
+  padding: 20px;
+  gap: 20px;
+  width: 45%;
+  border-radius: 8px;
+  margin: 10px;
 }
 
 .todo-header {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .circle {
-    border: 2px solid transparent;
-    border-radius: 50%;
-    height: 18px;
-    width: 18px;
-    border-color: #999;
-    border-width: 1px;
+  border: 2px solid transparent;
+  border-radius: 50%;
+  height: 18px;
+  width: 18px;
+  border-color: #999;
+  border-width: 1px;
 }
 
 .low-priority {
-    border-color: green;
+  border-color: green;
 }
 
 .medium-priority {
-    border-color: orange;
+  border-color: orange;
 }
 
 .high-priority {
-    border-color: red;
+  border-color: red;
 }
 
 .actions-container img {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .text-container {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    flex-wrap: wrap;
-    width: 95%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  flex-wrap: wrap;
+  width: 95%;
 }
 
 .text-container .description {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .actions-container {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 .project-item {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .svg,
 .delete-btn,
 img {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
 }
